--- a/CSharpPlayersGuide.csproj
+++ b/CSharpPlayersGuide.csproj
@@ -21,6 +21,7 @@
     <Compile Remove="Concepts\DecisionMaking.cs" />
     <Compile Remove="Concepts\Enumerations.cs" />
     <Compile Remove="Concepts\FormattingInterpolatedStrings.cs" />
+    <Compile Remove="Concepts\InformationHiding.cs" />
     <Compile Remove="Concepts\Looping.cs" />
     <Compile Remove="Concepts\Recursion.cs" />
     <Compile Remove="Concepts\StaticMethods.cs" />
