--- a/CSharpPlayersGuide.csproj
+++ b/CSharpPlayersGuide.csproj
@@ -36,7 +36,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="Challenges\ThePropertiesOfArrows.cs" />
+    <Folder Include="Challenges\" />
   </ItemGroup>
 
 </Project>
