--- a/CSharpPlayersGuide.csproj
+++ b/CSharpPlayersGuide.csproj
@@ -38,7 +38,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="Challenges\TheLockedDoor.cs" />
+    <Compile Include="Challenges\ThePasswordValidator.cs" />
   </ItemGroup>
 
 </Project>
