--- a/CSharpPlayersGuide.csproj
+++ b/CSharpPlayersGuide.csproj
@@ -22,6 +22,7 @@
     <Compile Remove="Concepts\Enumerations.cs" />
     <Compile Remove="Concepts\FormattingInterpolatedStrings.cs" />
     <Compile Remove="Concepts\InformationHiding.cs" />
+    <Compile Remove="Concepts\Inheritance.cs" />
     <Compile Remove="Concepts\Looping.cs" />
     <Compile Remove="Concepts\NullReferences.cs" />
     <Compile Remove="Concepts\Properties.cs" />
