--- a/CSharpPlayersGuide.csproj
+++ b/CSharpPlayersGuide.csproj
@@ -23,6 +23,7 @@
     <Compile Remove="Concepts\FormattingInterpolatedStrings.cs" />
     <Compile Remove="Concepts\InformationHiding.cs" />
     <Compile Remove="Concepts\Inheritance.cs" />
+    <Compile Remove="Concepts\Interfaces.cs" />
     <Compile Remove="Concepts\Looping.cs" />
     <Compile Remove="Concepts\NullReferences.cs" />
     <Compile Remove="Concepts\Polymorphism.cs" />
