--- a/CSharpPlayersGuide.csproj
+++ b/CSharpPlayersGuide.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="Challenges\TheFountainOfObjects\FOO_GettingArmed.cs" />
+    <Compile Include="Challenges\TheFountainOfObjects\FOO_GettingHelp.cs" />
   </ItemGroup>
 
   <ItemGroup>
