--- a/CSharpPlayersGuide.csproj
+++ b/CSharpPlayersGuide.csproj
@@ -45,7 +45,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="Challenges\TimeInTheCavern.cs" />
+    <Compile Include="Challenges\ListOfCommands.cs" />
   </ItemGroup>
 
   <ItemGroup>
