--- a/CSharpPlayersGuide.csproj
+++ b/CSharpPlayersGuide.csproj
@@ -21,6 +21,7 @@
     <Compile Remove="Concepts\ConsoleFunctions.cs" />
     <Compile Remove="Concepts\DecisionMaking.cs" />
     <Compile Remove="Concepts\Enumerations.cs" />
+    <Compile Remove="Concepts\ErrorHandlingAndExceptions.cs" />
     <Compile Remove="Concepts\FormattingInterpolatedStrings.cs" />
     <Compile Remove="Concepts\Generics.cs" />
     <Compile Remove="Concepts\InformationHiding.cs" />
@@ -52,6 +53,10 @@
     <Compile Remove="Concepts\Tuples.cs" />
     <Compile Remove="Concepts\UpdatingVariables.cs" />
     <Compile Remove="Program.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="Challenges\ExeptisGame.cs" />
   </ItemGroup>
 
   <ItemGroup>
