--- a/CSharpPlayersGuide.csproj
+++ b/CSharpPlayersGuide.csproj
@@ -23,6 +23,7 @@
     <Compile Remove="Concepts\Delegates.cs" />
     <Compile Remove="Concepts\Enumerations.cs" />
     <Compile Remove="Concepts\ErrorHandlingAndExceptions.cs" />
+    <Compile Remove="Concepts\Events.cs" />
     <Compile Remove="Concepts\FormattingInterpolatedStrings.cs" />
     <Compile Remove="Concepts\Generics.cs" />
     <Compile Remove="Concepts\InformationHiding.cs" />
@@ -54,6 +55,10 @@
     <Compile Remove="Concepts\Tuples.cs" />
     <Compile Remove="Concepts\UpdatingVariables.cs" />
     <Compile Remove="Program.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="Challenges\CharberryTrees.cs" />
   </ItemGroup>
 
   <ItemGroup>
